# gitlab-branch-gen

./: Cargo.toml  Readme.md  dist-workspace.toml  package-lock.json  package.json  plan-dist-manifest.json  readme.md  tsconfig.json
src/: App.tsx  cli.tsx  env.ts  gitlab-api.ts  main.rs  types.ts
src/components/: BranchCreator.tsx  ConfigInput.tsx  EnvInfo.tsx
