[package]
name = "gitlab-branch-gen"
version = "1.0.2"
edition = "2024"
license = "MIT"
description = """
Gitlab Branch Gen is a CLI Tool to create the same branch name in multiple repositories.
It allows to create a config and repeat the action. This is useful for branch based releases
"""
homepage = "https://github.com/stefhol/gitlab-branch-gen"
repository = "https://github.com/stefhol/gitlab-branch-gen"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
itertools = "0.14.0"
os_path = "0.8.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serde_yml = "0.0.12"
shellexpand = "3.1.1"
tokio = { version = "1.47.1", features = ["full"] }
urlencoding = "2.1.3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
strip = true
codegen-units = 1
